e2e/manifests/authservice/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - port: 8080
    name: http-authservice
    targetPort: http-api
  - port: 8082
    name: http-web
    targetPort: http-web
  publishNotReadyAddresses: true
